----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-01-01 Michal Čihař  <michal@cihar.com>
    * tbl_alter.php: Don't try to set collation for non text fields (bug
      #1094109).
    * sql.php: Do not forget reloading when launching multiple queries (bug
      #1090818).

2004-12-30 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/swedish: Updated, thanks to Björn T. Hallberg (bth).
    * lang/norwegian: Update, thanks to Sven-Erik Andersen
    * lang/latvian: Updated, thanks to Sandis Jerics (saaa2002).

2004-12-30 Michal Čihař  <michal@cihar.com>
    * libraries/fpdf/ufpdf.php: Fix some warnings.

2004-12-29 Michal Čihař  <michal@cihar.com>
    * libraries/export/sql.php: Fix typo.
    * server_databases.php: Use same sort order as in left frame (bug
      #1087244), allow sorting even if not showing stats.
    * pdf_schema.php, libraries/fpdf/fpdf.php, libraries/fpdf/ufpdf.php,
      libraries/fpdf/font/FreeSans*: Added support for PDF output in utf-8,
      uses UFPDF class from http://www.acko.net/node/56. NOTE: We now have a
      bit modified FPDF class. (bug #1046051)
    * Documentation.html: Added info about UFPDF library.
    * lang/czech, lang/english: Improved some texts, also bug #1009667.

2004-12-28 Michal Čihař  <michal@cihar.com>
    * libraries/tbl_move_copy.php: Fix constraints copying (bug #1085900).
    * config.inc.php, lang/*, libraries/common.lib.php,
      libraries/config_import.lib.php, libraries/display_export.lib.php,
      libraries/export/sql.php: Support for selecting SQL export compatibility
      (RFE #1060040).
    * libraries/tbl_change.js: Faster navigation in calendar (RFE #1090315).
    * mult_submits.inc.php, tbl_row_delete.php: Fix % escaping (bug #1082954).
    * read_dump.php: Fix database name extraction from use statement (bug
      #1084777).
    * css/phpmyadmin.css.php, libraries/common.lib.php: Disabled theme manager