@@ -5,6 +5,11 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2005-01-03 Michal Čihař  <michal@cihar.com>
+    * export.php: Use standardised mime types and use content encoding for
+      gzip/bzip2. I hope this will fix double gzip compression as in bug
+      #1094649.
+    
 2005-01-01 Michal Čihař  <michal@cihar.com>
     * tbl_alter.php: Don't try to set collation for non text fields (bug
       #1094109).
